# plotting_api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: plot.py  test.ipynb
src/scverse_plotting_api/: __init__.py  helpers.py
tests/: test_basic.py  test_heuristics.py
